--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -6,18 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.finance.FinanceFragment" >
-
-    <TextView
-        android:id="@+id/text_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+    <view android:layout_width="0dp" android:layout_height="0dp" class="android.widget.ListView"
+          android:id="@+id/ongoing_sets" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
+          app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
+          app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
+          app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="250dp"
+          app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
