--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,17 @@
             android:id="@+id/nav_call"
             android:label="@string/title_call"
             tools:layout="@layout/fragment_call"
-            android:name="com.example.csc207courseproject.ui.call.CallFragment"/>
+            android:name="com.example.csc207courseproject.ui.call.CallFragment">
+        <action android:id="@+id/action_nav_call_to_callSetFragment" app:destination="@id/callSetFragment"/>
+    </fragment>
 
     <fragment
             android:id="@+id/nav_report"
             android:name="com.example.csc207courseproject.ui.report.ReportFragment"
             android:label="@string/title_report"
-            tools:layout="@layout/fragment_seeding"/>
+            tools:layout="@layout/fragment_seeding">
+        <action android:id="@+id/action_nav_report_to_reportSetFragment" app:destination="@id/reportSetFragment"/>
+    </fragment>
 
     <fragment
             android:id="@+id/nav_finance"
@@ -28,4 +32,9 @@
     <fragment android:id="@+id/nav_seeding"
               android:name="com.example.csc207courseproject.ui.seeding.SeedingFragment"
               android:label="@string/title_seeding"/>
+    <fragment android:id="@+id/callSetFragment" android:name="com.example.csc207courseproject.ui.call.CallSetFragment"
+              android:label="fragment_call_set" tools:layout="@layout/fragment_call_set"/>
+    <fragment android:id="@+id/reportSetFragment"
+              android:name="com.example.csc207courseproject.ui.report.ReportSetFragment"
+              android:label="fragment_report_set" tools:layout="@layout/fragment_report_set"/>
 </navigation>
