--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -13,4 +13,24 @@
           app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
           app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="250dp"
           app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
+    <Button
+            android:text="@string/stations_button"
+            android:layout_width="233dp"
+            android:layout_height="70dp" android:id="@+id/configure_button"
+            android:layout_marginTop="70dp"
+            app:layout_constraintTop_toBottomOf="@+id/upcoming_sets" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="83dp" android:layout_marginEnd="95dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="111dp" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0"/>
+    <TextView
+            android:text="@string/upcoming_sets"
+            android:layout_width="331dp"
+            android:layout_height="44dp" android:id="@+id/sets_text"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="44dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="37dp" android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/upcoming_sets" android:layout_marginEnd="43dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="20sp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
