--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -28,9 +28,11 @@
             android:layout_width="331dp"
             android:layout_height="44dp" android:id="@+id/sets_text"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="44dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="37dp" android:layout_marginBottom="12dp"
+            android:layout_marginTop="1dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="37dp" android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toTopOf="@+id/upcoming_sets" android:layout_marginEnd="43dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="20sp"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="34sp"
+            android:includeFontPadding="true" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
