--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.finance.FinanceFragment" >
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.finance.FinanceFragment">
     <TextView
-            android:text="@string/title_report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/titleView" tools:layout_editor_absoluteY="60dp"
-            tools:layout_editor_absoluteX="174dp"/>
-    <ListView
-            android:layout_width="409dp"
-            android:layout_height="539dp" tools:layout_editor_absoluteY="80dp" tools:layout_editor_absoluteX="1dp"/>
+            android:text="@string/ongoing_sets"
+            android:layout_width="331dp"
+            android:layout_height="44dp" android:id="@+id/ongoing_sets_title"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="15dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="37dp" android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/upcoming_sets" android:layout_marginEnd="43dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="34sp"
+            android:includeFontPadding="true" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0" app:autoSizeTextType="none"/>
     <view android:layout_width="0dp" android:layout_height="0dp" class="android.widget.ListView"
           android:id="@+id/ongoing_sets" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
           app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
