Handled exceptions thrown by the DAO

--- a/app/src/main/res/layout/activity_select_tournament.xml
+++ b/app/src/main/res/layout/activity_select_tournament.xml
@@ -8,4 +8,12 @@
     android:layout_height="match_parent"
     tools:context=".SelectTournamentActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <TextView
+          android:text="Select Tournament"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" android:id="@+id/tournamentViewTitle"
+          app:layout_constraintTop_toTopOf="parent"
+          android:layout_marginTop="140dp" app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent" android:fontFamily="sans-serif-medium" android:textSize="34sp"
+          app:layout_constraintHorizontal_bias="0.495" android:textStyle="bold"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
