--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,13 +7,21 @@
             android:text="@string/title_app"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/appTitle"
-            android:fontFamily="sans-serif-medium" android:textSize="34sp"
+            android:fontFamily="sans-serif-medium" android:textSize="45sp"
             android:textStyle="bold" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="168dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
     <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/loginButton"
+            android:layout_width="160dp"
+            android:layout_height="76dp" android:id="@+id/loginButton"
             android:text="@string/login_button"
-            app:layout_constraintTop_toBottomOf="@+id/appTitle" android:layout_marginTop="220dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/appTitle" android:layout_marginTop="268dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:textSize="34sp" app:layout_constraintHorizontal_bias="0.498"/>
+    <ImageView
+            android:layout_width="105dp"
+            android:layout_height="105dp" app:srcCompat="@drawable/startgglogo" android:id="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="264dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
