--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -35,4 +35,11 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="34sp"
             android:includeFontPadding="true" app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintVertical_bias="0.0"/>
+    <TextView
+            android:text="@string/no_upcoming"
+            android:layout_width="323dp"
+            android:layout_height="182dp" android:id="@+id/no_upcoming_sets"
+            android:textSize="48sp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
+            app:layout_constraintTop_toBottomOf="@+id/sets_text" android:layout_marginTop="50dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
