Displays user's tournaments on the screen

--- a/app/src/main/res/layout/activity_select_tournament.xml
+++ b/app/src/main/res/layout/activity_select_tournament.xml
@@ -12,20 +12,14 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" android:id="@+id/tournamentViewTitle"
           app:layout_constraintTop_toTopOf="parent"
-          android:layout_marginTop="116dp" app:layout_constraintEnd_toEndOf="parent"
+          android:layout_marginTop="88dp" app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent" android:fontFamily="sans-serif-medium" android:textSize="34sp"
           app:layout_constraintHorizontal_bias="0.495" android:textStyle="bold"
           android:text="@string/tournament_view_title"/>
-  <ImageView
-          android:layout_width="50dp"
-          android:layout_height="50dp" app:srcCompat="@drawable/startgglogo" android:id="@+id/startggLogo"
-          app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-          android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
-  <ScrollView
-          android:layout_width="356dp"
-          android:layout_height="607dp" tools:layout_editor_absoluteY="191dp" tools:layout_editor_absoluteX="27dp"
-          android:id="@+id/tournaments_list">
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:orientation="vertical"/>
-  </ScrollView>
+  <view android:layout_width="344dp" android:layout_height="639dp" class="android.widget.ListView"
+        android:id="@+id/tournament_list"
+        app:layout_constraintTop_toBottomOf="@+id/tournamentViewTitle" android:layout_marginTop="50dp"
+        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintVertical_bias="0.0" android:layout_marginBottom="88dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
