Bug Fix: Removed the property change listeners in onDestroyView methods to avoid may property changes being fired

--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -30,5 +30,6 @@
             android:layout_height="182dp" android:id="@+id/no_ongoing_sets"
             android:textSize="48sp"
             app:layout_constraintTop_toTopOf="@+id/ongoing_sets" android:layout_marginTop="45dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
+            android:visibility="visible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
