--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -42,4 +42,12 @@
             android:textSize="48sp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
             app:layout_constraintTop_toBottomOf="@+id/sets_text" android:layout_marginTop="50dp"/>
+    <TextView
+            android:text="@string/preview_issue_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/preview_message"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/no_upcoming_sets"
+            app:layout_constraintStart_toStartOf="@+id/upcoming_sets" android:layout_marginStart="12dp"
+            android:visibility="visible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
