--- a/app/src/main/res/layout/fragment_report_set.xml
+++ b/app/src/main/res/layout/fragment_report_set.xml
@@ -7,6 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".ui.report.ReportSetFragment">
 
+    <view android:layout_width="343dp" android:layout_height="376dp" class="android.widget.ListView"
+          android:id="@+id/games_list"
+          android:layout_marginTop="11dp"
+          app:layout_constraintTop_toBottomOf="@+id/isP1DQ" android:layout_marginBottom="28dp"
+          app:layout_constraintBottom_toTopOf="@+id/mutate_set_button" app:layout_constraintStart_toStartOf="parent"
+          android:layout_marginStart="34dp" android:layout_marginEnd="34dp" app:layout_constraintEnd_toEndOf="parent"/>
     <Button
             android:text="@string/report_set_text"
             android:layout_width="249dp"
@@ -54,12 +60,4 @@
             android:layout_height="wrap_content" android:id="@+id/isP2DQ"
             android:layout_marginEnd="63dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@+id/text_mini" android:textSize="16sp"/>
-    <ScrollView
-            android:layout_width="409dp"
-            android:layout_height="386dp" tools:layout_editor_absoluteX="1dp" android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@+id/isP1DQ"
-            app:layout_constraintBottom_toTopOf="@+id/mutate_set_button" android:id="@+id/games_report_menu">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:orientation="vertical"/>
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
