--- a/app/src/main/res/layout/fragment_call_set.xml
+++ b/app/src/main/res/layout/fragment_call_set.xml
@@ -7,30 +7,35 @@
         android:layout_height="match_parent"
         tools:context=".ui.call.CallSetFragment">
 
+    <Spinner
+            android:layout_width="366dp"
+            android:layout_height="65dp" android:id="@+id/decline_tag_select"
+            android:spinnerMode="dropdown"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/decline_text" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="225dp" android:layout_marginEnd="23dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:id="@+id/selected_text"
-            android:layout_width="326dp"
-            android:layout_height="86dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="320dp"
+            android:layout_height="110dp"
             android:textAlignment="center"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.492"
-            app:layout_constraintVertical_bias="0.133"
-            android:textStyle="bold"/>
+            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="82dp" android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toTopOf="@+id/stream_button" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="42dp" android:layout_marginEnd="42dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <Button
             android:text="@string/call_button"
             android:layout_width="140dp"
             android:layout_height="117dp" android:id="@+id/call_button"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="42dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="312dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="322dp"
             android:layout_marginTop="123dp" app:layout_constraintTop_toBottomOf="@+id/selected_text"
             app:layout_constraintEnd_toStartOf="@+id/decline_button" android:layout_marginEnd="26dp"
-            android:textSize="22sp"/>
+            android:textSize="22sp" app:layout_constraintVertical_bias="0.672"/>
     <Button
             android:text="@string/decline_button"
             android:layout_width="140dp"
@@ -38,15 +43,48 @@
             android:layout_marginTop="123dp"
             app:layout_constraintTop_toBottomOf="@+id/selected_text" android:layout_marginStart="46dp"
             app:layout_constraintStart_toEndOf="@+id/call_button" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="312dp" android:layout_marginEnd="43dp"
-            app:layout_constraintEnd_toEndOf="parent" android:textSize="22sp"/>
+            android:layout_marginBottom="322dp" android:layout_marginEnd="43dp"
+            app:layout_constraintEnd_toEndOf="parent" android:textSize="22sp"
+            app:layout_constraintVertical_bias="0.672"/>
     <Button
             android:text="@string/stream_button"
             android:layout_width="249dp"
             android:layout_height="72dp" android:id="@+id/stream_button"
-            android:layout_marginTop="109dp"
+            android:textSize="20sp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/selected_text" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="81dp"
+            app:layout_constraintBottom_toTopOf="@id/call_button" android:layout_marginEnd="81dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="100dp"
+            android:visibility="invisible"/>
+    <TextView
+            android:text="@string/decline_text"
+            android:layout_width="300dp"
+            android:layout_height="39dp" android:id="@+id/decline_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="26sp" android:layout_marginTop="64dp"
             app:layout_constraintTop_toBottomOf="@+id/call_button" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="102dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="137dp" android:layout_marginEnd="103dp"
-            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"/>
+            android:layout_marginStart="16dp" android:layout_marginBottom="5dp"
+            app:layout_constraintBottom_toTopOf="@+id/decline_tag_select" android:layout_marginEnd="95dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <CheckBox
+            android:text="@string/applies_p1"
+            android:layout_width="172dp"
+            android:layout_height="61dp" android:id="@+id/applies_p1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="20sp" android:layout_marginTop="22dp"
+            app:layout_constraintTop_toBottomOf="@+id/decline_tag_select" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="29dp" app:layout_constraintEnd_toStartOf="@+id/applies_p2"
+            android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="114dp"/>
+    <CheckBox
+            android:text="@string/applies_p2"
+            android:layout_width="172dp"
+            android:layout_height="61dp" android:id="@+id/applies_p2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="20sp" android:layout_marginTop="22dp"
+            app:layout_constraintTop_toBottomOf="@+id/decline_tag_select" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@+id/applies_p1" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="114dp" android:layout_marginEnd="30dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
