--- a/app/src/main/res/layout/fragment_call_stations.xml
+++ b/app/src/main/res/layout/fragment_call_stations.xml
@@ -12,7 +12,6 @@
           app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
           app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
           app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="500dp"
-          android:layout_marginTop="-50dp"
           app:layout_constraintVertical_bias="0.0"
     />
     <Button
@@ -46,6 +45,13 @@
             android:layout_marginEnd="171dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
             android:textSize="20sp"/>
+    <TextView
+            android:text="@string/no_stations"
+            android:layout_width="325dp"
+            android:layout_height="245dp" android:id="@+id/no_stations"
+            android:textSize="48sp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
+            app:layout_constraintTop_toBottomOf="@+id/sets_text" android:layout_marginTop="100dp"/>
     <Button
             android:text="@string/submit_tag"
             android:layout_width="102dp"
