--- a/app/src/main/res/layout/list_stations.xml
+++ b/app/src/main/res/layout/list_stations.xml
@@ -4,11 +4,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android">
-
     <TextView
             android:layout_width="199dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:layout_height="wrap_content" android:id="@+id/report_winner_title" android:textSize="24sp"
+            android:layout_height="wrap_content" android:id="@+id/station_title" android:textSize="24sp"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp" android:layout_marginEnd="183dp"
             android:layout_marginBottom="1dp"
@@ -16,14 +15,14 @@
     <TextView
             android:layout_width="387dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:layout_height="wrap_content" android:id="@+id/character_entry"
+            android:layout_height="wrap_content" android:id="@+id/station_tags"
             android:layout_marginTop="1dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="165dp"
             android:text="@string/empty_tags" android:textSize="16sp"/>
     <Spinner
             android:layout_width="138dp"
-            android:layout_height="59dp" android:id="@+id/p1_char_select"
+            android:layout_height="59dp" android:id="@+id/tag_select"
             android:spinnerMode="dropdown"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="10dp"/>
